# snek

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.hpp.in  requirements.txt
.github/workflows/: build.yml  cpp.yml
cli/: CMakeLists.txt
cli/include/snek/cli/: utils.hpp
cli/src/: main.cpp  repl.cpp  utils.cpp
cmake/: utils.cmake
debug/: CMakeLists.txt
debug/src/: lexer.cpp  parser.cpp  utils.cpp
editor/: snek.vim
examples/: custom-types.snek  factorial.snek  fibonacci.snek  hello-world.snek  lo-dash.snek  modules.snek  prototypes.snek
include/snek/: api.hpp  cst.hpp  error.hpp  interpreter.hpp  lexer.hpp  message.hpp  parameter.hpp  parser.hpp  permission.hpp  scope.hpp  utils.hpp
include/snek/ast/: base.hpp  import.hpp  parameter.hpp  position.hpp  record.hpp  type.hpp
include/snek/ast/expr/: base.hpp  binary.hpp  bool.hpp  call.hpp  field.hpp  float.hpp  func.hpp  id.hpp  int.hpp  list.hpp  not.hpp  null.hpp  record.hpp  str.hpp  subscript.hpp  unary.hpp
include/snek/ast/stmt/: assign.hpp  base.hpp  block.hpp  break.hpp  continue.hpp  export.hpp  expr.hpp  if.hpp  import.hpp  pass.hpp  return.hpp  type.hpp  while.hpp
include/snek/ast/type/: base.hpp  builtin.hpp  func.hpp  intersection.hpp  list.hpp  multiple.hpp  named.hpp  record.hpp  str.hpp  tuple.hpp  union.hpp
include/snek/type/: any.hpp  base.hpp  func.hpp  intersection.hpp  list.hpp  primitive.hpp  record.hpp  str.hpp  tuple.hpp  union.hpp  utils.hpp
include/snek/value/: base.hpp  bin.hpp  bool.hpp  float.hpp  func.hpp  int.hpp  list.hpp  null.hpp  record.hpp  str.hpp  utils.hpp
interpreter/: CMakeLists.txt
interpreter/include/snek/interpreter/: assign.hpp  config.hpp.in  error.hpp  evaluate.hpp  execute.hpp  frame.hpp  jump.hpp  parameter.hpp  resolve.hpp  runtime.hpp  scope.hpp  type.hpp  value.hpp
interpreter/src/: api.cpp  assign.cpp  error.cpp  evaluate.cpp  execute.cpp  frame.cpp  module.cpp  parameter.cpp  runtime.cpp  scope.cpp  type.cpp  value.cpp
interpreter/src/prototype/: boolean.cpp  float.cpp  function.cpp  int.cpp  list.cpp  number.cpp  object.cpp  record.cpp  string.cpp
interpreter/src/resolve/: expression.cpp  field.cpp  parameter.cpp  statement.cpp  type.cpp
interpreter/src/type/: boolean.cpp  builtin.cpp  function.cpp  intersection.cpp  list.cpp  record.cpp  string.cpp  tuple.cpp  union.cpp  utils.cpp  utils.hpp
interpreter/src/value/: boolean.cpp  float.cpp  function.cpp  int.cpp  list.cpp  record.cpp  string.cpp
parser/: CMakeLists.txt
parser/include/snek/: error.hpp  macros.hpp  position.hpp
parser/include/snek/parser/: element.hpp  error.hpp  expression.hpp  field.hpp  import.hpp  lexer.hpp  node.hpp  parameter.hpp  statement.hpp  token.hpp  type.hpp  utils.hpp
parser/src/: element.cpp  error.cpp  expression.cpp  field.cpp  import.cpp  lexer.cpp  parameter.cpp  position.cpp  statement.cpp  token.cpp  type.cpp  utils.cpp
parser/test/: CMakeLists.txt  test_element.cpp  test_field.cpp  test_import.cpp  test_parameter.cpp  test_type.cpp  test_utils.cpp
src/: api.cpp  cst.cpp  interpreter.cpp  lexer.cpp  main.cpp  message.cpp  parameter.cpp  parser.cpp  repl.cpp  scope.cpp  utils.cpp
src/api/: bin.cpp  debug.cpp  fs.cpp  io.cpp  list.cpp  record.cpp  str.cpp
src/ast/: base.cpp  import.cpp  parameter.cpp  record.cpp
src/ast/expr/: base.cpp  binary.cpp  bool.cpp  call.cpp  field.cpp  float.cpp  func.cpp  id.cpp  int.cpp  list.cpp  not.cpp  null.cpp  record.cpp  str.cpp  subscript.cpp  unary.cpp
src/ast/stmt/: assign.cpp  base.cpp  block.cpp  break.cpp  continue.cpp  export.cpp  expr.cpp  if.cpp  import.cpp  pass.cpp  return.cpp  type.cpp  while.cpp
src/ast/type/: base.cpp  builtin.cpp  func.cpp  intersection.cpp  list.cpp  multiple.cpp  named.cpp  record.cpp  str.cpp  tuple.cpp  union.cpp
src/parser/: expr.cpp  import.cpp  record.cpp  stmt.cpp  type.cpp
src/type/: any.cpp  base.cpp  func.cpp  intersection.cpp  list.cpp  primitive.cpp  record.cpp  str.cpp  tuple.cpp  union.cpp
src/value/: base.cpp  bin.cpp  bool.cpp  float.cpp  func.cpp  int.cpp  list.cpp  null.cpp  record.cpp  str.cpp
tests/: CMakeLists.txt  parser-type.cpp
